--- a/src/PackIT.Application/PackIT.Application.csproj
+++ b/src/PackIT.Application/PackIT.Application.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PackIT.Domain\PackIT.Domain.csproj" />
+    <ProjectReference Include="..\PackIT.Shared.Infrastructure\PackIT.Shared.csproj" />
   </ItemGroup>
 
 </Project>
