--- a/src/PackIT.Infrastructure/PackIT.Infrastructure.csproj
+++ b/src/PackIT.Infrastructure/PackIT.Infrastructure.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\PackIT.Application\PackIT.Application.csproj" />
     <ProjectReference Include="..\PackIT.Domain\PackIT.Domain.csproj" />
   </ItemGroup>
