--- a/src/PackIT.Api/appsettings.json
+++ b/src/PackIT.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Postgres": {
+    "ConnectionString": "Host=localhost;Database=packIt;Username=postgres;Password=my_password"
+  }
 }
